--- a/config.org
+++ b/config.org
@@ -18,7 +18,9 @@
 #+begin_src elisp
 (defvar bootstrap-version)
 (let ((bootstrap-file
-       (expand-file-name "straight/repos/straight.el/bootstrap.el" user-emacs-directory))
+       (expand-file-name
+	"straight/repos/straight.el/bootstrap.el"
+	user-emacs-directory))
       (bootstrap-version 5))
   (unless (file-exists-p bootstrap-file)
     (with-current-buffer
@@ -79,11 +81,11 @@
 
 - styling
   #+begin_src elisp
-    (use-package org-bullets
-	:ensure t
-	    :init
-	    (add-hook 'org-mode-hook (lambda ()
-				(org-bullets-mode 1))))
+  (use-package org-bullets
+      :ensure t
+          :init
+          (add-hook 'org-mode-hook (lambda ()
+                              (org-bullets-mode 1))))
   #+end_src
   
 - shortcuts
@@ -116,7 +118,8 @@
    :keymaps 'org-mode-map
    :prefix "SPC"
    "r i" '(org-roam-node-insert :which-key "node insert")
-   "r b" '(org-roam-buffer-toggle :which-key "buffer toggle"))
+   "r b" '(org-roam-buffer-toggle :which-key "buffer toggle")
+   "P" '(org-preview-html-mode :which-key "Org Preview HTML"))
   #+end_src
 
 - Org Agenda
@@ -161,7 +164,6 @@
 
   #+begin_src elisp
   (setq shell-file-name "/bin/zsh") ;; this will be different for linux and mac machines
-  ;;(setq shell-file-name "/bin/bash") ;; this will be different for linux and mac machines
   (use-package vterm
     :ensure t)
   (setq vterm-kill-buffer-on-exit t)
@@ -259,10 +261,14 @@
     :ensure t
     :hook
     (lsp-mode . lsp-enable-which-key-integration)
+    ;; golang
     (go-mode . lsp-deferred)
+    ;; javascript
     (js-mode . lsp-deferred)
+    ;; svelte 
     (web-mode . lsp-deferred)
-    (svelte-mode . lsp-deferred)
+    ;; haskell
+    (haskell-mode .lsp-deferred)
     :commands (lsp lsp-deferred)
     :config
     (define-key lsp-mode-map (kbd "C-l C-l") lsp-command-map))
@@ -359,8 +365,6 @@
 (use-package haskell-mode :ensure t)
 (use-package lsp-haskell :ensure t)
 (require 'lsp-haskell)
-(add-hook 'haskell-mode-hook #'lsp)
-(add-hook 'haskell-literate-mode-hook #'lsp)
 #+end_src
 
 - interactive haskell support, as detailed [[http://haskell.github.io/haskell-mode/manual/latest/Interactive-Haskell.html#Interactive-Haskell][here]] 
@@ -451,12 +455,17 @@
  :prefix "SPC"
  "r" '(nodejs-repl-send-region :which-key "send region"))
   #+end_src
-- getting support for svelte, web mode will not work with lsp mode 
+
+- getting support for svelte/ web development
   #+begin_src elisp
   (use-package svelte-mode :ensure t)
   (use-package web-mode :ensure t)
   (setq web-mode-enable-auto-pairing t)
+  ;; html support 
   (add-to-list 'auto-mode-alist '("\\.html?\\'" . web-mode))
+  ;; svelte support 
+  (setq web-mode-engines-alist
+        '(("svelte" . "\\.svelte\\'")))
   (eval-after-load "web-mode"
     '(setq web-mode-enable-auto-expanding t))
   #+end_src
@@ -492,6 +501,7 @@
 - [[https://www.racket-mode.com/#Install-Racket-Mode][racket mode]] website
 #+begin_src elisp
 (use-package racket-mode :ensure t) 
+;; org mode src block support
 (use-package ob-racket
   :after org
   :config
@@ -506,6 +516,7 @@
  :keymaps 'racket-mode-map
  :prefix "SPC"
  "\\" '(racket-insert-lambda :which-key "insert lambda"))
+
 (general-define-key
  :states '(visual)
  :keymaps 'racket-mode-map
@@ -528,7 +539,7 @@
 #+end_src
 **** Clojure
 #+begin_src elisp
-(use-package flycheck-clj-kondo :ensure t)
+(use-package flycheck-clj-kondo :ensure t) ;ensure that you get syntax highlighting
 (use-package clojure-mode
   :ensure t
   :config
@@ -539,13 +550,12 @@
  :keymaps 'cider-mode-map
  :prefix "SPC"
  "r" '(cider-eval-region :which-key "send region"))
-;;(setq cider-lein-parameters "repl :headless :host localhost")
 #+end_src
 **** smart parens
 #+begin_src elisp
 (use-package smartparens :ensure t)
 (require 'smartparens-config)
-(sp-pair "\<" nil :actions :rem)
+(sp-pair "\<" nil :actions :rem) ;don't use with < from html 
 (add-hook 'racket-mode-hook #'smartparens-mode)
 (add-hook 'clojure-mode-hook #'smartparens-mode)
 (add-hook 'scheme-mode-hook #'smartparens-mode)
@@ -589,7 +599,7 @@
 #+begin_src elisp
 (use-package markdown-mode :ensure t
   :config
-  (add-hook 'markdown-mode-hook 'flyspell-mode))
+  (add-hook 'markdown-mode-hook 'flyspell-mode)) ;make sure spelling is alright
 #+end_src
 
 *** R
@@ -673,7 +683,8 @@
   
 #+begin_src elisp
 (use-package dracula-theme :ensure t)
-(load-theme 'dracula t)
+(use-package gruvbox-theme :ensure t)
+(load-theme 'gruvbox t)
 #+end_src
 
 *** modeline
